# AnalysisTools

./: .gitignore  .travis.yml  Dangerfile  Gemfile  LICENSE.md  Makefile  README.md  TMP_run_helper.sh  build.sh  cmake_install.cmake  genpairs.pl  install_dependencies.sh  lichen  lichen.cabal  matchpercent.pl  moss  package-lock.json  package.json  setup.py  stack.yaml  strip_comments.py  strip_comments_python  style.css  tsconfig.json  winnow.c
ClassStructureAnalysis/: CSA.py
anonymization/: Makefile  README.md
anonymization/include/: config.h  utils.h
anonymization/src/: anonymize.c
app/: Main.hs
app/count/: Main.hs
app/count-node/: Main.hs
app/count-token/: Main.hs
app/diagnostics/: Main.hs
app/plagiarism/: Main.hs
commonAST/: ASTMatcher.cpp  CMakeLists.txt  CMakeListsUnion.txt  astMatcher.py  astMatcherLink.py  clangInstallFinal.py  commonast.py  commonastLocal.py  compareTest.py  context.py  createAllJson.py  eqTag.py  graphCompare.js  jsonDiff.py  jsonDiffRunner.py  jsonDiffRunnerRunner.py  jsonDiffSubmittyRunner.py  match.py  out.txt  outElizabeth.txt  outIntersect.txt  outUnion.txt  parser.cpp  parser.h  parserLink.cpp  parserUnion.cpp  parserUnion.h  refMaps.py  removeTokens.py  runCppToolAll.py  runSamToolAll.py  runner.py  traversal.cpp  traversal.h  traversalMain.cpp  traversalUnion.cpp  traversalUnion.h  unionTool.cpp  unionToolRunner.py  utils.py
commonAST/cpp-test-files/: Ingredient.cpp  Ingredient.h  Kitchen.cpp  Node.cpp  Node.h  Player.cpp  Recipe.cpp  Recipe.h  Rectangle.cpp  Time.h  Time2.cpp  binarySearchSudo.cpp  board.cpp  board.h  callArgs.cpp  check2.cpp  check3.cpp  check3_2.cpp  compoundWords.cpp  ds_hashset.cpp  ds_set.h  dslist.h  forLoop.cpp  helloWorld.cpp  hw1.cpp  image.cpp  image.h  lab7.cpp  lab8.cpp  location.cpp  location.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  (+34 more)
commonAST/cpp-test-files/classTest/: dog.cpp
commonAST/cpp-test-files/complexity/: complexity.cpp
commonAST/cpp-test-files/exception/: exception.cpp
commonAST/cpp-test-files/funcs/: functions.cpp
commonAST/cpp-test-files/hw10/: Point2D.h  Rectangle.h  polygons.cpp  utilities.h
commonAST/cpp-test-files/hw2/: Player.cpp  Player.h  main2.cpp
commonAST/cpp-test-files/hw3/: main3.cpp  tetris.cpp
commonAST/cpp-test-files/hw4/: main7.cpp
commonAST/cpp-test-files/hw5/: main5.cpp  traincar.cpp  traincar.h
commonAST/cpp-test-files/hw6/: Node.cpp  Node.h  board.cpp  board.h  location.cpp  main6.cpp  tile.cpp
commonAST/cpp-test-files/hw7/: Ingredient.cpp  Kitchen.h  Recipe.cpp  Recipe.h  main4.cpp  word.cpp
commonAST/cpp-test-files/hw8/: main8.cpp
commonAST/cpp-test-files/hw9/: image.cpp  main9.cpp
commonAST/cpp-test-files/ifelse/: else.cpp
commonAST/cpp-test-files/lab1/: check3_1.cpp
commonAST/cpp-test-files/lab11/: ds_hashset.h
commonAST/cpp-test-files/lab13/: superhero.cpp
commonAST/cpp-test-files/lab14/: ds_smart_pointers.h
commonAST/cpp-test-files/lab3/: Time.cpp  julian.cpp  lab3.cpp  mainlab2.cpp
commonAST/cpp-test-files/lab9/: lab9.cpp
commonAST/cpp-test-files/mainLab/: mainLab_6.cpp
commonAST/cpp-test-files/nestedFor/: forLoops.cpp
commonAST/cpp-test-files/pointers/: pointersTest.cpp
commonAST/cpp-test-files/quad/: quadratic.cpp
commonAST/cpp-test-files/recTest/: recursionTEST.cpp
commonAST/cpp-test-files/sub/: subscript.cpp
commonAST/cpp-test-files/test1prac/: test1Practice.cpp
commonAST/cpp-test-files/test_1/: test.cpp
commonAST/cpp-test-files/vec/: test_vec.cpp
commonAST/cpp-test-files/vector/: vectorTest.cpp
commonAST/cpp-test-files/wordsearch/: wordsearch.cpp
commonAST/py-test-files/: Barrier.py  Bird.py  Check1 (3).py  Check1 (4).py  Check1 (6).py  Check2 (3).py  Check2 (4).py  Check2 (8).py  Check3 (3).py  Check3 (6).py  Date.py  Deck.py  Pig.py  check0 (1).py  check0.py  check1 (1).py  check1 (2).py  check1 (5).py  check1 (7).py  check1 (8).py  check1.py  check2 (1).py  check2 (2).py  check2 (6).py  check2 (7).py  check2 (9).py  check2.py  check2_helper.py  check3 (1).py  check3 (2).py  check3 (4).py  check3 (5).py  check3 (7).py  check3.py  check4.py  complexity.py  example_list_of_lists.py  forLoop.py  functions.py  hw2.py  (+25 more)
config/: moss.json  plagiarism.json
docs/: NODES.md  PLAGIARISM.md  TOKENS.md
include/: config.h  fingerprints.h  utils.h
lang/: ast_node.c  ast_node.h  lexer.py  node.py  parser.py
lang/c/: lex.l  main.c  parse.y  pymod.c  tokens.h
lang/java/: ClassData.java  HierarchyVisitor.java  Loader.java  TreeMakerVisitor.java  UMLvisitor.java  get_data_from_reiminfir  javaparser  lex.l  tokens.h
lang/newc/: lex.l  main.c  parse.y
lang/python/: conversion.py  lex.l
lang/python2/: parse
lexer/c/: lex  lex.l  lex.out.c  symtab.h
lexer/java/: lex  lex.l  lex.out.c  symtab.h
lexer/python/: lex  lex.l  lex.out.c  symtab.h
src/: Compare.hs  Config.hs  Language.hs  Lexer.hs  Walk.hs  Winnow.hs  anonymize.c  anonymize_dirs.c  compare_fingerprints.c  count.ts  diagnostics.ts  genpairs.c  index.ts  make_table.c  multi.c  parser.ts  rename_dirs.c  walk.c  winnow.c
src/Lichen/: Config.hs  Error.hs  Languages.hs  Lexer.hs  Parser.hs  Util.hs
src/Lichen/Config/: Count.hs  CountNode.hs  CountToken.hs  Diagnostics.hs  Languages.hs  Loader.hs  Plagiarism.hs
src/Lichen/Count/: Config.hs  Counters.hs  Main.hs
src/Lichen/CountNode/: Main.hs
src/Lichen/CountToken/: Main.hs
src/Lichen/Diagnostics/: Config.hs  Main.hs  Render.hs
src/Lichen/Lexer/: C.hs  Java.hs  Python.hs  Text.hs
src/Lichen/Parser/: Python.hs
src/Lichen/Plagiarism/: AssignmentSettings.hs  Compare.hs  Concatenate.hs  Config.hs  Highlight.hs  Main.hs  Provided.hs  Render.hs  Report.hs  Shared.hs  Submitty.hs  (+2 more)
test/commonASTtests/: tester.py
treeTool/: ast_tree.html  make_tree.js  make_tree_interactive.py  out.html  style.css  treeTemplate1.txt  treeTemplate2.txt
treeTool/test_files/: ex1aSecond.json  ex1acpp.json  ex1apy.json  ex2apy.json  hw2aSam.json  lambda.json  lambda2.json  out.json  testCommon.json  testSam.json  testSamCopy.json
(+19 files in other folders)
