name:                lichen
version:             0.1.0.0
synopsis:            Plagiarism Detection and Other Static Analysis
description:         Please see README.md
homepage:            https://github.com/Submitty/AnalysisTools
author:              Samuel Breese
maintainer:          breess@rpi.edu
copyright:           2016 Samuel Breese
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lichen.Config
                     , Lichen.Config.Languages
                     , Lichen.Config.Loader
                     , Lichen.Util
                     , Lichen.Lexer
                     , Lichen.Lexer.C
                     , Lichen.Plagiarism.Winnow
                     , Lichen.Plagiarism.Compare
                     , Lichen.Plagiarism.Walk
                     , Lichen.Plagiarism.Concatenate
                     , Lichen.Plagiarism.Highlight
                     , Lichen.Plagiarism.AssignmentSettings
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , text
                     , bytestring
                     , mtl
                     , hashable
                     , process
                     , directory
                     , filepath
                     , megaparsec
                     , aeson
                     , dyre
  default-language:    Haskell2010

executable lichen-plagiarism
  hs-source-dirs:      app/plagiarism
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , lichen
                     , text
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chameco/lichen
