name:                lichen
version:             0.2.1
synopsis:            Plagiarism Detection and Other Static Analysis
description:         Please see README.md
homepage:            https://github.com/Submitty/AnalysisTools
author:              Samuel Breese
maintainer:          breess@rpi.edu
copyright:           2016 Samuel Breese
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lichen.Util
                     , Lichen.Error
                     , Lichen.Config
                     , Lichen.Config.Languages
                     , Lichen.Config.Plagiarism
                     , Lichen.Config.Count
                     , Lichen.Lexer
                     , Lichen.Lexer.C
                     , Lichen.Lexer.Python
                     , Lichen.Parser
                     , Lichen.Parser.Python
                     , Lichen.Plagiarism.Main
                     , Lichen.Plagiarism.Winnow
                     , Lichen.Plagiarism.Compare
                     , Lichen.Plagiarism.Walk
                     , Lichen.Plagiarism.Concatenate
                     , Lichen.Plagiarism.Highlight
                     , Lichen.Plagiarism.Report
                     , Lichen.Plagiarism.AssignmentSettings
                     , Lichen.Plagiarism.Render
                     , Lichen.Plagiarism.Render.Index
                     , Lichen.Plagiarism.Render.Compare
                     , Lichen.Count.Main
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , text
                     , bytestring
                     , mtl
                     , hashable
                     , process
                     , directory
                     , filepath
                     , json
                     , megaparsec
                     , optparse-applicative
                     , language-python
                     , blaze-html
                     , blaze-markup
                     , clay
  ghc-options:         -Wall -Werror -fwarn-incomplete-patterns
  default-language:    Haskell2010

executable plagiarism
  hs-source-dirs:      app/plagiarism
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Werror
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

executable count
  hs-source-dirs:      app/count
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Werror
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Submitty/AnalysisTools
