name:                lichen
version:             0.3.0
synopsis:            Plagiarism Detection and Other Static Analysis
description:         Please see README.md
homepage:            https://github.com/Submitty/AnalysisTools
author:              Samuel Breese
maintainer:          breess@rpi.edu
copyright:           2016 Samuel Breese
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lichen.Util
                     , Lichen.Error
                     , Lichen.Languages
                     , Lichen.Config

                     , Lichen.Lexer
                     , Lichen.Lexer.C
                     , Lichen.Lexer.Python
                     , Lichen.Lexer.Java

                     , Lichen.Parser
                     , Lichen.Parser.Python

                     , Lichen.Plagiarism.Main
                     , Lichen.Plagiarism.Config
                     , Lichen.Plagiarism.Winnow
                     , Lichen.Plagiarism.Compare
                     , Lichen.Plagiarism.Walk
                     , Lichen.Plagiarism.Concatenate
                     , Lichen.Plagiarism.Highlight
                     , Lichen.Plagiarism.Shared
                     , Lichen.Plagiarism.AssignmentSettings
                     , Lichen.Plagiarism.Report
                     , Lichen.Plagiarism.Render
                     , Lichen.Plagiarism.Render.Index
                     , Lichen.Plagiarism.Render.Compare

                     , Lichen.Count.Main
                     , Lichen.Count.Config
                     , Lichen.Count.Counters

                     , Lichen.Diagnostics.Main
                     , Lichen.Diagnostics.Config
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , text
                     , bytestring
                     , mtl
                     , hashable
                     , process
                     , directory
                     , filepath
                     , ansi-terminal
                     , aeson
                     , aeson-pretty
                     , megaparsec
                     , optparse-applicative
                     , language-python
                     , blaze-html
                     , blaze-markup
                     , clay
                     , jmacro
                     , QuickCheck
                     , hspec
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable plagiarism
  hs-source-dirs:      app/plagiarism
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

executable count
  hs-source-dirs:      app/count
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

executable diagnostics
  hs-source-dirs:      app/diagnostics
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lichen
  default-language:    Haskell2010

test-suite lichen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Lichen.Plagiarism.WinnowSpec
  build-depends:       base
                     , lichen
                     , QuickCheck
                     , hspec
                     , megaparsec
  ghc-options:         -fno-warn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Submitty/AnalysisTools
